<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TeaOrCoffeeActivity" >

    <TextView
        android:id="@+id/textViewTeaOrCoffeeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tea_or_coffee"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButtonTea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/tea"
                android:onClick="clickTea"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tea" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButtonCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/coffee"
                android:onClick="clickCoffee"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/coffee" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/btnStyleOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:onClick="clickConfirm"
        android:text="@string/confirm" />

</LinearLayout>