<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_decide"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:padding="6dip" >

        <ImageView
            android:id="@+id/toc_icon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="6dip"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:src="@drawable/tea_or_coffee_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/toc_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/to_decide"
                android:textSize="22sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonToc"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickTeaOrCoffee"
            android:text="TOC" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:padding="6dip" >

        <ImageView
            android:id="@+id/work_icon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="6dip"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:src="@drawable/unknown" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/work_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/to_decide"
                android:textSize="22sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickWorkReview"
            android:text="Work" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewSpentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spent" />

        <TextView
            android:id="@+id/textViewSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewTocAlarmTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/data"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/progressBarSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button1"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickSync"
            android:text="@string/synchronize" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>